style.css
article {
  max-width: 30rem;
  margin: auto;
  font-family: Arial, sans-serif;
  line-height: 1.5rem;
}

p {
  position: relative;
}

mark {
  background: none;
}

.button-between-paragraphs {
  display: block;
  margin-top: 2rem;
  cursor: pointer;
  background: rgb(246, 246, 246);
  border: none;
  border-radius: 99999px;
  width: 4.92rem;
  height: 2.22rem;
}

.button-between-paragraphs:before {
  content: "▷";
  color: red;
  padding-right: 0.5rem;
}

.button-between-paragraphs:hover:before {
  content: "▶";
  padding-right: 0.6rem;
}

.button-left-of-paragraph {
  background: none;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  background: #323232;
  cursor: pointer;
  border: none;
  position: absolute;
  top: 0;
  left: -3rem;
}

.button-left-of-paragraph:before {
  content: "▶";
  color: white;
  margin-left: 0.12rem;
}

.button-left-of-paragraph.pause:before {
  content: "| |";
  font-weight: bold;
  margin-left: 0;
}

.button-left-of-paragraph:hover {
  background: red;
}

#prototype-settings {
  position: absolute;
  top: 0;
  right: 0;
  border-left: 1px dashed gray;
  border-bottom: 1px dashed gray;
  padding: 1rem;
}

input {
  cursor: pointer;
  margin-bottom: 1rem;
}

.beyondwords-current {
  background: rgba(254, 191, 0, 0.25);
}

.click-to-play:hover {
  cursor: pointer;
}

.click-to-play:hover .click-to-play-marker {
  background: rgba(252, 219, 220, 1);
}

.fix-to-bottom {
  position: fixed;
  bottom: 0;
  padding-bottom: 0.5rem;
  left: 0;
  width: 100%;
  z-index: 1;
  display: flex;
  justify-content: center;
  background: linear-gradient(rgba(0, 0, 0, 0), white);
}

.fix-to-bottom audio {
  filter: drop-shadow(0 0 0.2rem rgba(0, 0, 0, 0.5));
}

